AMD RS880 (R600) element/text rendering gets clipped and misaligned on long pages
Categories
(Core :: Graphics: WebRender, defect, P2)
Tracking
()
People
(Reporter: ke5trel, Assigned: bradwerth)
References
(Blocks 1 open bug, Regression)
Details
(Keywords: regression)
Attachments
(5 files)
STR:
- Using AMD RS880 (R600) on Ubuntu 22.10 with Mesa 22.2.5.0 with default hardware acceleration settings (Webrender).
- Visit a long page (eg
about:configshowing all settings) and scroll to the bottom.
Elements are vertically misaligned, cropped and cut off proportional to how much the page is scrolled. First noticeable as lines of text getting clipped, borders and underlines disappearing but getting progressively worse until large chunks of the document go missing. At the very end of the page there is a transparent region displaying a hall of mirrors effect.
Workaround requires disabling hardware acceleration and falling back to software webrender.
Regression window:
https://hg.mozilla.org/integration/autoland/pushloghtml?fromchange=8f90b75e263e1f09f8f0d8341ae1c5b86c915191&tochange=b20918f8f6084f291745aada1a4e15c861b76cca
Regressed by Bug 1798360.
Originally regressed by Bug 1545006 as per Bug 1673939 Comment 10.
Updated•3 years ago
|
Comment 3•3 years ago
•
|
||
(In reply to Kestrel from comment #0)
How severe is the problem?
- When does the glitch start occuring?
a) After scrolling a tiny bit down (but you are still rather at the top)
b) After longer scrolling
c) Only after scrolling to the bottom of a very long page (bug 1726431) - Does the problem start occuring at the top as well after scrolling down and up?
- Have you seen the problem on popular websites like YouTube, Facebook, Twitter, Reddit, etc?
The top of the page is always good, even after scrolling a very long page. At 20 pages it is a minor annoyance, at 40 pages some lines start becoming unreadable, at 100 pages the majority of lines are unreadable. Sites with infinite scroll are particularly affected which includes popular ones like YouTube, Reddit and Facebook. Twitter is a notable exception with what seems an unconventional implementation of infinite scroll.
Comment 5•3 years ago
|
||
REO comment - wondering why this was marked as an S3. Seems like a pretty serious rendering glitch with Wayland.
Updated•3 years ago
|
Updated•3 years ago
|
Comment 6•3 years ago
|
||
For posterity: this is occurring because we unblock-listed this particular driver on this particular Linux hardware.
Updated•3 years ago
|
Comment 8•3 years ago
|
||
(In reply to Bob Hood [:bhood] from comment #7)
Brad will be blocking this driver again in code.
Can this be overridden by some environment variable?
| Assignee | ||
Comment 9•3 years ago
|
||
(In reply to Paul Menzel from comment #8)
(In reply to Bob Hood [:bhood] from comment #7)
Brad will be blocking this driver again in code.
Can this be overridden by some environment variable?
Yes, navigating to "about:config" and setting the pref "gfx.webrender.all" to true will be enough to override all blocklists.
Updated•3 years ago
|
Updated•3 years ago
|
(In reply to Bob Hood [:bhood] from comment #7)
Brad will be blocking this driver again in code.
Brad, is there a bug for that?
| Assignee | ||
Comment 11•3 years ago
|
||
(In reply to Pascal Chevrel:pascalc from comment #10)
Brad, is there a bug for that?
I have filed Bug 1831598 for this issue.
| Assignee | ||
Updated•3 years ago
|
| Assignee | ||
Comment 12•3 years ago
|
||
Until Bug 1831598 lands, we'll block this in code for Nightly and Beta.
| Assignee | ||
Comment 13•3 years ago
|
||
Updated•3 years ago
|
Comment 14•3 years ago
|
||
Brad, could you request uplift for 114? That looks like a good candidate for our RC2. Thanks!
| Reporter | ||
Comment 16•3 years ago
|
||
Chromium (snap using mesa 21.2.6) with hardware acceleration (Canvas, Compositing and Rasterization) does not have this issue and chrome://gpu lists some driver bug workarounds but nothing specific to R600 on Linux:
| Assignee | ||
Comment 17•3 years ago
|
||
Comment on attachment 9336000 [details]
Bug 1821892: Block R600 hardware with Mesa drivers in all channels.
Beta/Release Uplift Approval Request
- User impact if declined: Linux R600 users viewing tall web content may see distorted text rendering at the bottom of the page.
- Is this code covered by automated tests?: No
- Has the fix been verified in Nightly?: Yes
- Needs manual test from QE?: No
- If yes, steps to reproduce:
- List of other uplifts needed: None
- Risk to taking this patch: Medium
- Why is the change risky/not risky? (and alternatives if risky): This forces Linux R600 users into our software WebRender path. It will regress performance in some cases. Video performance in particular will be adversely affected. Bug 1798360 will likely be re-opened.
- String changes made/needed:
- Is Android affected?: No
Comment 18•3 years ago
|
||
| bugherder | ||
Comment on attachment 9336000 [details]
Bug 1821892: Block R600 hardware with Mesa drivers in all channels.
Approved as a ride-along for 114 RC 2, thanks.
Comment 20•3 years ago
|
||
| bugherder uplift | ||
Comment 21•3 years ago
|
||
Hello! It seems that the QA team does not have the specific hardware in order to confirm this fix.
Kestrel, could you please verify on your end if the issue is still reproducible on Firefox 114RC2? You can use a treeherder build https://treeherder.mozilla.org/jobs?repo=mozilla-release, or the 114RC2 build, when it will be available (most probably on Friday).
| Reporter | ||
Comment 22•3 years ago
|
||
| Reporter | ||
Comment 23•3 years ago
|
||
I can verify that hardware acceleration (HW-WR) is blocked on latest Nightly 115.0a1 (2023-05-31) and the 114.0 try build.
| Assignee | ||
Updated•3 years ago
|
Updated•3 years ago
|
Description
•