Bug 1821892: Block R600 hardware with Mesa drivers in all channels. r=gfx-reviewers,jrmuizel

Differential Revision: https://phabricator.services.mozilla.com/D179155